--- a/index.html
+++ b/index.html
@@ -14,45 +14,43 @@
   </head>
 
   <body>
-    <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
-      <!-- Highscores-left -->
-      <div class="navbar-left">
-        <button class="navScore">View Highscores</button>
-      </div>
-      <!-- Quiz name-center -->
-      <div class="navbar-header">
-        <h1>Pop Quiz</h1>
-      </div>
-      <!-- Timer-right -->
-      <div class="navbar-right">
-        <div class="navTimer">Timer</div>
-      </div>
-    </nav>
+    <div class="jumbotron rounded-0">
+      <h1 class="text-center">Pop Quiz</h1>
+    </div>
 
-    <!-- Landing image  -->
-    <div id="home"></div>
+    <!-- Timer -->
+    <div class="navTimer">
+      <div class="Timer">Timer</div>
+    </div>
 
-    <!-- Quiz container -->
+    <!-- Highscores Button -->
+    <div class="navScore">
+      <button class="Score">View Highscores</button>
+    </div>
+
+    <!-- Bootstrap grid -->
     <div class="container-fluid">
-      <div class="col-md-2"></div>
-
-      <div class="col-md-8">
-        <div id="question-container" class="hide">
-          <div id="question">Question</div>
-          <div id="answer-buttons" class="btn-grid">
-            <button class="btn">A</button>
-            <button class="btn">B</button>
-            <button class="btn">C</button>
-            <button class="btn">D</button>
+      <div class="row">
+        <div class="col-md-2"></div>
+        <!-- Quiz container -->
+        <div class="col-md-8">
+          <div id="questionContainer" class="hide">
+            <div id="question">What is the 1st question?</div>
+            <div id="answerButtons" class="btn-grid">
+              <button class="btn">A</button>
+              <button class="btn">B</button>
+              <button class="btn">C</button>
+              <button class="btn">D</button>
+            </div>
+          </div>
+          <!-- Start/Next control buttons -->
+          <div class="controls">
+            <button id="startBtn" class="startBtn btn">Start</button>
+            <button id="nextBtn" class="nextBtn btn hide">Next</button>
           </div>
         </div>
-        <!-- Start/Next control buttons -->
-        <div class="controls">
-          <button id="startBtn" class="startBtn btn">Start</button>
-          <button id="nextBtn" class="nextBtn btn hide">Next</button>
-        </div>
+        <div class="col-md-2"></div>
       </div>
-      <div class="col-md-2"></div>
     </div>
 
     <script
