--- a/index.html
+++ b/index.html
@@ -19,14 +19,15 @@
     </div>
 
     <!-- Timer -->
-    <div class="navTimer">
-      <div class="Timer">Timer</div>
+    <div>
+      <h1 class="navTimer" id="Timer">Timer</h1>
     </div>
 
     <!-- Highscores Button -->
     <div class="navScore">
-      <button class="Score">View Highscores</button>
+      <button class="scoreBtn">View Highscores</button>
     </div>
+    <!-- <div class="displayScores"></div> -->
 
     <!-- Bootstrap grid -->
     <div class="container-fluid">
