--- a/index.html
+++ b/index.html
@@ -49,11 +49,14 @@
           <!-- Start/Next control buttons -->
           <div class="controls">
             <button id="startBtn" class="startBtn btn">Start</button>
-            <button id="nextBtn" class="nextBtn btn hide">Next</button>
           </div>
         </div>
         <div class="col-md-2"></div>
       </div>
+    </div>
+
+    <div class="endQuiz">
+      <button id="nextBtn" class="nextBtn btn hide">Next</button>
     </div>
 
     <script
