--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
     <div class="navScore">
       <button class="scoreBtn">View Highscores</button>
     </div>
-    <!-- <div class="displayScores"></div> -->
+    <br></br>
+    <div id="initialTxt" class="initial"></div>
 
     <!-- Bootstrap grid -->
     <div class="container-fluid">
@@ -39,17 +40,13 @@
             <div id="question"></div>
             <div id="answerButtons" class="btn-group-vertical"></div>
           </div>
-          <!-- Start/Next control buttons -->
-          <div class="controls">
+          <!-- Start control button -->
+          <div class="control">
             <button class="startBtn btn" id="startBtn">Start</button>
           </div>
         </div>
         <div class="col-md-2"></div>
       </div>
-    </div>
-
-    <div class="endQuiz">
-      <button id="nextBtn" class="nextBtn btn hide">Next</button>
     </div>
 
     <script
