--- a/scoreboard.html
+++ b/scoreboard.html
@@ -19,7 +19,7 @@
       var initialsValue = "";
       const highScoresList = document.getElementById("highScoresList");
       // const highScores = JSON.parse(localStorage.getItem("highScores")) || [];
-      const highScores = JSON.parse(localStorage.getItem("highScores")) || [];
+      const highScores = JSON.parse(localStorage.getItem("points")) || [];
       console.log("highScores=" + highScores);
       const MAX_HIGH_SCORES = 5;
 
