--- a/scoreboard.html
+++ b/scoreboard.html
@@ -13,9 +13,7 @@
     <title>Pop Quiz</title>
 
     <script>
-      var scoresHTML = "";
-      var points = 0;
-      var initials = document.createElement("initial");
+      // Scoreboard variables
       var initialsValue = "";
       const highScoresList = document.getElementById("highScoresList");
       // const highScores = JSON.parse(localStorage.getItem("highScores")) || [];
@@ -32,6 +30,7 @@
       );
       // highScores.push(points);
       // highScores.sort (a,b) => b.points - a.points)
+      //document.getElementById("initialTxt").appendChild(initials);
     </script>
   </head>
 
