centered answer buttons

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
           </button></a
         >
       </div>
+      <!-- <div class="initTxt" id="initTxtbox"></div> -->
     </nav>
 
     <!-- Bootstrap grid -->
@@ -49,6 +50,14 @@
         <div class="col-md-2"></div>
       </div>
     </div>
+    <!-- <form id="initTxtbox">
+      <input
+        type="type"
+        id="initials"
+        oninput="createInitInput()"
+        placeholder="Enter initials here"
+      />
+    </form> -->
 
     <script
       src="https://code.jquery.com/jquery-3.5.0.slim.js"
