--- a/index.html
+++ b/index.html
@@ -50,14 +50,14 @@
         <div class="col-md-2"></div>
       </div>
     </div>
-    <!-- <form id="initTxtbox">
-      <input
-        type="type"
-        id="initials"
-        oninput="createInitInput()"
-        placeholder="Enter initials here"
-      />
-    </form> -->
+    <div id="initialsContainer">
+      <b>Enter your initials here.</b>
+      <br />
+      <br />
+      <!-- <form id="initTxtbox"> -->
+      <input id="initials" type="type" placeholder="Enter initials here" />
+      <!-- </form> -->
+    </div>
 
     <script
       src="https://code.jquery.com/jquery-3.5.0.slim.js"
